# Hooke-Jeeves-Cpp

./: .gitignore  CMakeLists.txt  HookeJeevesWrapper.cpp  HookeJeevesWrapper.h  README.md  main.cpp
include/: HJWrapper.h
src/: HJWrapper.cpp  main.cpp
test/: CMakeLists.txt  HJWrapperTest.cpp
